# advent-of-code

./: .gitignore  mypy.ini  pyproject.toml
src/aoc/: __init__.py  logger.py  tools.py
src/aoc/2015/01/: prompt.md  solution.py
src/aoc/2015/02/: prompt.md  solution.py
src/aoc/2015/03/: prompt.md  solution.py
src/aoc/2015/04/: prompt.md  solution.py
src/aoc/2015/05/: prompt.md  solution.py  solution_roc.py
src/aoc/2015/06/: new.md  prompt.md  solution.py
src/aoc/2015/07/: prompt.md  solution.py
src/aoc/2015/08/: prompt.md  solution.py
src/aoc/2015/09/: prompt.md  solution.py
src/aoc/2015/10/: data2.tsv  local.txt  newtab.csv  newtab_bak.csv  prompt.md  sample.txt  solution.py  solution_2.py  solution_b.py  solution_th.py  solution_th_next.py  table.csv  table_mat.csv  tableb.csv
src/aoc/2015/18/: prompt.md  solution.py  solution_roc.py
src/aoc/2015/24/: prompt.md  solution.py
src/aoc/2021/01/: prompt.md  solution.py
src/aoc/2021/02/: prompt.md  solution.py
src/aoc/2021/03/: prompt.md  solution.py
src/aoc/2021/04/: prompt.md  solution.py  solution_mult.py  solution_nb.py
src/aoc/2021/05/: prompt.md  solution.py
src/aoc/2021/06/: prompt.md  solution.py  solution_nb.py
src/aoc/2021/07/: prompt.md  solution.py
src/aoc/2021/08/: prompt.md  solution.py  solution_b.py  static.py
src/aoc/2021/09/: prompt.md  runnable.py  solution.py
src/aoc/2021/10/: prompt.md  solution.py  solution_b.py
src/aoc/2021/11/: prompt.md  solution.py
src/aoc/2021/13/: prompt.md  solution.py
src/aoc/2021/15/: prompt.md  solution.py
src/aoc/2021/16/: prompt.md  solution.py
src/aoc/2022/01/: solution.py
src/aoc/2022/02/: solution.py
src/aoc/2022/03/: solution.py
src/aoc/2022/04/: prompt.md  solution.py
src/aoc/2022/05/: prompt.md  solution.py
tests/: test_tools.py
