[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["ionite34 <dev@ionite.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
advent-cli = ">=0.2.2"
numba = "^0.56.0"
scipy = ">=1.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
funcy = "^1.17"
alive-progress = "^2.4.1"
networkx = "^2.8.5"
joblib = "^1.1.0"
mypy = "^0.971"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
mypy = ">=0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
